# hout-prover

./: ChangeLog.md  LICENSE  README.md  hout.cabal  stack.yaml
examples/Hout/: Examples.hs
src/Hout/Logic/: FirstOrder.hs  Intuitionistic.hs
src/Hout/Prover/: Proofs.hs  Tactics.hs
